# clone-manager-zome

./: Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  result
.github/workflows/: build-and-cache-zomes.yaml  test.yaml
crates/clone_manager_types/: Cargo.toml
crates/clone_manager_types/src/: lib.rs
crates/clone_manager_utils/: Cargo.toml
crates/clone_manager_utils/src/: lib.rs  main.rs
docs/: clone-manager-store.md  index.md  introduction.md  package.json  setup.md
docs/.vitepress/: config.mts
tests/: package.json
tests/src/: all-clone-requests.test.ts  setup.ts
ui/: custom-elements.json  package.json
ui/demo/: index.html
ui/src/: clone-manager-client.ts  clone-manager-store.ts  context.ts  index.ts  mocks.ts  types.ts
ui/src/elements/: clone-manager-context.ts
workdir/: dna.nix  dna.yaml  happ.nix  happ.yaml
zomes/coordinator/clone_manager/: Cargo.toml  zome.nix
zomes/coordinator/clone_manager/src/: all_clone_requests.rs  clone_providers.rs  clone_providers_for_request.rs  clone_request.rs  lib.rs  utils.rs
zomes/integrity/clone_manager/: Cargo.toml  zome.nix
zomes/integrity/clone_manager/src/: clone_provider_for_request.rs  clone_providers.rs  clone_request.rs  lib.rs
