[package]
name = "clone_manager"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "clone_manager"

[dependencies]
hdk = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

clone_manager_integrity = { path = "../../integrity/clone_manager", package = "clone_manager_integrity" }
clone_manager_types = { path = "../../../crates/clone_manager_types" }
